# Sentinel-Images-Downloader

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py  xml_utils.py
config/: s1_default_config.json  s2_default_config.json
data/: s1_footprints.json  s2_relative_orbits.json
downloader/: base_downloader.py  downloader.py  s1_downloader.py  s2_downloader.py  utils.py  xml_utils.py
examples/: s1_default_config.json  s2_default_config.json
sentinel_images_downloader/: main.py
sentinel_images_downloader/config/: endpoints.py  logger.py  path.py
sentinel_images_downloader/downloader/: base_downloader.py  s1_downloader.py  s2_downloader.py  utils.py  xml_utils.py
sentinel_images_downloader/utils/: auth.py  dates.py  io_utils.py  utils.py
