[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-images-downloader"

version = "1.0"

description = "A Python script to easily download Sentinel-2 satellite imagery from Copernicus Browser by specifying tile IDs, years, and bands."

requires-python = ">=3.11"

license-files = ["LICENSE"]

keywords = ["sentinel-2", "downloader", "satellite imagery"]

authors = [
    { name = "Daniel Minaya Vargas", email = "dminaya@dim.uchile.cl"}
]

dependencies = [
    "requests==2.32.3",
    "tqdm==4.66.4",
    "python-dotenv==1.0.1",
    "rasterio==1.3.10",
]

[project.urls]
repository = "https://github.com/DanielMinaya1/Sentinel-Images-Downloader"

[project.scripts]
sid-cli = "sentinel_images_downloader.main:main"

[tool.setuptools.packages.find]
where = ["."]